--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="container demo">
     	<button class="btn pull-right">Schedule a free demo</button>
 	</div>
-	<nav class="navbar navbar-default mynav">
+	<nav class="navbar navbar-default">
 		<div class="container">
 			 <div class="navbar-header">
 				<button type="button" data-target="#main-menu-collapse" data-toggle="collapse" class="mybutton navbar-toggle">
@@ -22,7 +22,7 @@
 	                <span class="icon-bar"></span>
 	                <span class="icon-bar"></span>
             	</button>
-            	<div class="navbar-brand"><img src="images/logo.png" class="logo"/></div>
+            	<div class="navbar-brand"><img src="images/logo.png"></div>
 			</div>
 			<div class="collapse navbar-collapse" id="main-menu-collapse">
 	            <ul class="nav navbar-nav navbar-right">
@@ -39,65 +39,66 @@
 	<div class="container">
 		<div class="image">
 			<img src="images/image1.png" class="img-responsive"/>
-			<div class="image-text">
-				<div class="text-top">Effortlessly combine your clients'</div>
-				<div class="text-mid">Direct mail</div>
+			<div class="text">
+				<div class="top">Effortlessly combine your clients'</div>
+				<div class="mid">Direct mail</div>
 				<div class="with">
 					<div class="border"></div>
 					<div class="text-with"><i>with</i></div>
 					<div class="border"></div>
 				</div>
 				<div class="cont-image"><img src="images/dm_line.png" class="img-responsive"></div>
-				<button class="btn white">Schedule a free demo</button>
+				<button class="btn">Schedule a free demo</button>
 			</div>
 		</div>
+
 		<div class="row centered"><hr>
 			<div class="icons">
-				<div class="col-md-3 col-sm-3 col-xs-6">
+				<div class="col-md-3 col-sm-6">
 					<img src="images/icon1.png"><br>
-					<h5 class="text first">REAL TIME TRACKING</h5 >
+					<h5 class="first">REAL TIME TRACKING</h5 >
 				</div>
-				<div class="col-md-3 col-sm-3 col-xs-6">
+				<div class="col-md-3 col-sm-6">
 					<img src="images/icon2.png">
-					<h5  class="text">PROVEN PROFITABLE</h5 >
+					<h5 class="second">PROVEN PROFITABLE</h5 >
 				</div>
-				<div class="col-md-3 col-sm-3 col-xs-6">
+				<div class="col-md-3 col-sm-6" style="clear:both;">
 					<img src="images/icon3.png">
-					<h5  class="text">MARKETING TOOLS</h5 >
+					<h5>MARKETING TOOLS</h5 >
 				</div>
-				<div class="col-md-3 col-sm-3 col-xs-6">
+				<div class="col-md-3 col-sm-6">
 					<img src="images/icon4.png">
-					<h5  class="text">QUICK & EASY SETUP</h5 >
+					<h5>QUICK & EASY SETUP</h5 >
 				</div>
 				<hr>
 			</div>
 		</div>
 	</div>
-	<div class="container track">
-		<div class="row">
+	<div class="container">
+		<div class="row track">
 			<div class="col-md-6 col-sm-6 col-xs-12 equal">
 				<h2 class="green">Call Tracking</h2>
-				<p class="desc">The call tracking feature of DirectMail2.0 allows clients to track exactly how many calls they receive from each campaign and allows them to listen to recordings of their phone calls to ensure their reception and sales process is running smoothly. Calls are directed to the client's business phone but recorded and tracked through call tracking software. This feature also helps printers and ad agencies for clients who do not do their own accurate tracking.</p>	
+				<p>The call tracking feature of DirectMail2.0 allows clients to track exactly how many calls they receive from each campaign and allows them to listen to recordings of their phone calls to ensure their reception and sales process is running smoothly. Calls are directed to the client's business phone but recorded and tracked through call tracking software. This feature also helps printers and ad agencies for clients who do not do their own accurate tracking.</p>	
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-12 ">
 				<img src="images/home_image1.png" class="img-responsive img">
 			</div>
 		</div>
 		<hr>
-		<div class="row">
+		<div class="row track">
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<img src="images/home_image2.png" class="img-responsive img">
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-12 equal">
 				<h2 class="pink">Mail Tracking</h2>
-				<p class="desc">The mail tracking feature shows clients the predicted date for mail delivery, as well as the actual delivery dates. This gives clients the ability to line up additional staff as needed. It also gives mail houses and marketing companies a simple tool to prove mail was delivered as promised.</p>	
+				<p>The mail tracking feature shows clients the predicted date for mail delivery, as well as the actual delivery dates. This gives clients the ability to line up additional staff as needed. It also gives mail houses and marketing companies a simple tool to prove mail was delivered as promised.</p>	
 			</div>
 		</div>
 		<hr>
-		<div class="row">
+		<div class="row track">
 			<div class="col-md-6 col-sm-6 col-xs-12 equal">
 				<h2 class="orange">Online Follow-up</h2>
-				<p class="desc">Your clients get the added benefit of our partnership with the Google network. When prospects receive their mail piece and go to the client's website, but do not take action like filling out a web form or purchasing online, they are captured through our online follow-up system.  Ads are shown through the Google network on over a million websites, including CNN.com and Dictionary.com</p>	
+				<p>Your clients get the added benefit of our partnership with the Google network. When prospects receive their mail piece and go to the client's website, but do not take action like filling out a web form or purchasing online, they are captured through our online follow-up system.  Ads are shown through the Google network on over a million websites, including CNN.com and Dictionary.com</p>	
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<img src="images/home_image3.png" class="img-responsive img">
@@ -106,7 +107,7 @@
 	</div>
 	<hr>
 	<footer class="centered">
-		<img src="images/footer.png" class="img-responsive foot">
+		<img src="images/footer.png" class="img-responsive">
 		<h1>See It Live in Action!</h1>
 		<button class="btn email">enter your email adress</button><br>
 		<button class="btn button-pink">Schedule a free demo</button>
